# gcovr-action

./: .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  LICENSE  README.md  action.yaml  action.yml  jest.config.js  jest.config.ts  lefthook.yaml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yaml  check.yaml  test.yaml  test.yml
sample/: CMakeLists.txt
sample/include/: is_even.hpp  is_odd.hpp
src/: action.mts  action.ts  coveralls.mts  coveralls.ts  deps.ts  exec.ts  gcovr.mts  gcovr.ts  http.mts  http.ts  index.test.ts  index.ts  inputs.ts  log.ts  main.mts  main.ts
src/chrono/: duration.ts  index.ts  time.ts
src/expect/: index.ts
src/io/: index.ts  json.test.ts  json.ts
src/testing/: error.ts  expect.ts  index.ts
src/testing/mock/: actions-cache.ts
test/: CMakeLists.txt  main.cpp
test/include/: example.hpp
test/test/: example_test.cpp
